<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/origin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/des_grade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="18dp">

        <TextView
            android:id="@+id/des_grade_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desired_grade"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/des_grade_choice"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/grade_ex"
            android:inputType="textPersonName"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/min_avg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="18dp">

        <TextView
            android:id="@+id/min_avg_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_avg"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/min_avg_choice"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/min_ex"
            android:inputType="numberDecimal"
            android:autofillHints=""/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/curr_avg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="18dp">

        <TextView
            android:id="@+id/curr_avg_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curr_avg"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/curr_avg_choice"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/curr_ex"
            android:inputType="numberDecimal"
            android:autofillHints=""/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/final_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/final_weight_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/final_weight"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/final_weight_choice"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/weight_ex"
            android:inputType="numberDecimal"
            android:autofillHints=""/>
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bull_blue"
        android:padding="16dp"
        android:text="@string/calc"
        android:textColor="@color/sunrise_gold"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/bull_blue" />

    <LinearLayout
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/result_prestring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="18dp"
            android:text="@string/result"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/result_num"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/result_percentage"
            android:textSize="72sp" />

        <TextView
            android:id="@+id/result_advice"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_avg"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>